MVP done, I'm really proud of myself :)

--- a/views/layout.erb
+++ b/views/layout.erb
@@ -7,9 +7,8 @@
   </head>
   <body>
     <nav>
-      <h1>Films</h1>
-      <%= yield %>
-
     </nav>
+    <h1>films</h1>
+    <%= yield %>
   </body>
 </html>
